Caching of variables with new let semantics (#26)