@@ -34,7 +34,6 @@ import static org.mal_lang.compiler.test.lib.AssertLang.assertLangTTC;
 import static org.mal_lang.compiler.test.lib.AssertLang.assertLangTags;
 import static org.mal_lang.compiler.test.lib.AssertToken.assertTokens;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
@@ -304,302 +303,285 @@ public class TestAllFeatures extends MalTest {
       new Token(TokenType.ID, CORE_MAL, 70, 9, "V1"),
       new Token(TokenType.ASSIGN, CORE_MAL, 70, 12),
       new Token(TokenType.ID, CORE_MAL, 70, 14, "used"),
-      new Token(TokenType.LET, CORE_MAL, 71, 5),
-      new Token(TokenType.ID, CORE_MAL, 71, 9, "V2"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 71, 12),
-      new Token(TokenType.ID, CORE_MAL, 71, 14, "V1"),
-      new Token(TokenType.ALL, CORE_MAL, 72, 5),
-      new Token(TokenType.ID, CORE_MAL, 72, 7, "AT"),
-      new Token(TokenType.OVERRIDE, CORE_MAL, 73, 7),
-      new Token(TokenType.LET, CORE_MAL, 73, 10),
-      new Token(TokenType.ID, CORE_MAL, 73, 14, "V1"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 73, 17),
-      new Token(TokenType.ID, CORE_MAL, 73, 19, "V2"),
-      new Token(TokenType.COMMA, CORE_MAL, 73, 21),
-      new Token(TokenType.ID, CORE_MAL, 74, 10, "V1"),
-      new Token(TokenType.DOT, CORE_MAL, 74, 12),
-      new Token(TokenType.ID, CORE_MAL, 74, 13, "a1Attack1"),
-      new Token(TokenType.RCURLY, CORE_MAL, 75, 3),
-      new Token(TokenType.RCURLY, CORE_MAL, 76, 1),
+      new Token(TokenType.LPAREN, CORE_MAL, 70, 18),
+      new Token(TokenType.RPAREN, CORE_MAL, 70, 19),
+      new Token(TokenType.ALL, CORE_MAL, 71, 5),
+      new Token(TokenType.ID, CORE_MAL, 71, 7, "AT"),
+      new Token(TokenType.OVERRIDE, CORE_MAL, 72, 7),
+      new Token(TokenType.ID, CORE_MAL, 72, 10, "V1"),
+      new Token(TokenType.LPAREN, CORE_MAL, 72, 12),
+      new Token(TokenType.RPAREN, CORE_MAL, 72, 13),
+      new Token(TokenType.DOT, CORE_MAL, 72, 14),
+      new Token(TokenType.ID, CORE_MAL, 72, 15, "a1Attack1"),
+      new Token(TokenType.RCURLY, CORE_MAL, 73, 3),
+      new Token(TokenType.RCURLY, CORE_MAL, 74, 1),
+      new Token(TokenType.CATEGORY, CORE_MAL, 76, 1),
+      new Token(TokenType.ID, CORE_MAL, 76, 10, "C2"),
+      new Token(TokenType.LCURLY, CORE_MAL, 76, 13),
+      new Token(TokenType.RCURLY, CORE_MAL, 76, 44),
       new Token(TokenType.CATEGORY, CORE_MAL, 78, 1),
       new Token(TokenType.ID, CORE_MAL, 78, 10, "C2"),
-      new Token(TokenType.LCURLY, CORE_MAL, 78, 13),
-      new Token(TokenType.RCURLY, CORE_MAL, 78, 44),
-      new Token(TokenType.CATEGORY, CORE_MAL, 80, 1),
-      new Token(TokenType.ID, CORE_MAL, 80, 10, "C2"),
-      new Token(TokenType.ID, CORE_MAL, 81, 3, "modeler"),
-      new Token(TokenType.INFO, CORE_MAL, 81, 11),
-      new Token(TokenType.COLON, CORE_MAL, 81, 15),
-      new Token(TokenType.STRING, CORE_MAL, 81, 17, "None for C2"),
-      new Token(TokenType.LCURLY, CORE_MAL, 82, 1),
-      new Token(TokenType.ABSTRACT, CORE_MAL, 83, 3),
-      new Token(TokenType.ASSET, CORE_MAL, 83, 12),
-      new Token(TokenType.ID, CORE_MAL, 83, 18, "A4"),
-      new Token(TokenType.ID, CORE_MAL, 84, 5, "modeler"),
-      new Token(TokenType.INFO, CORE_MAL, 84, 13),
-      new Token(TokenType.COLON, CORE_MAL, 84, 17),
-      new Token(TokenType.STRING, CORE_MAL, 84, 19, "None for A4"),
-      new Token(TokenType.ID, CORE_MAL, 85, 5, "developer"),
-      new Token(TokenType.INFO, CORE_MAL, 85, 15),
-      new Token(TokenType.COLON, CORE_MAL, 85, 19),
-      new Token(TokenType.STRING, CORE_MAL, 85, 21, "Reasoning for A4"),
-      new Token(TokenType.ID, CORE_MAL, 86, 5, "user"),
-      new Token(TokenType.INFO, CORE_MAL, 86, 10),
-      new Token(TokenType.COLON, CORE_MAL, 86, 14),
-      new Token(TokenType.STRING, CORE_MAL, 86, 16, "This is A4"),
-      new Token(TokenType.LCURLY, CORE_MAL, 87, 3),
-      new Token(TokenType.LET, CORE_MAL, 88, 5),
-      new Token(TokenType.ID, CORE_MAL, 88, 9, "var"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 88, 13),
-      new Token(TokenType.ID, CORE_MAL, 88, 15, "a1"),
-      new Token(TokenType.DOT, CORE_MAL, 88, 17),
-      new Token(TokenType.ID, CORE_MAL, 88, 18, "a1Sub"),
-      new Token(TokenType.STAR, CORE_MAL, 88, 23),
-      new Token(TokenType.ANY, CORE_MAL, 89, 5),
-      new Token(TokenType.ID, CORE_MAL, 89, 7, "a"),
-      new Token(TokenType.OVERRIDE, CORE_MAL, 90, 7),
-      new Token(TokenType.LPAREN, CORE_MAL, 90, 10),
-      new Token(TokenType.ID, CORE_MAL, 90, 11, "var"),
-      new Token(TokenType.UNION, CORE_MAL, 90, 15),
-      new Token(TokenType.ID, CORE_MAL, 90, 18, "var2"),
-      new Token(TokenType.RPAREN, CORE_MAL, 90, 22),
-      new Token(TokenType.DOT, CORE_MAL, 90, 23),
-      new Token(TokenType.ID, CORE_MAL, 90, 24, "a1Attack1"),
-      new Token(TokenType.COMMA, CORE_MAL, 90, 33),
-      new Token(TokenType.LET, CORE_MAL, 92, 10),
-      new Token(TokenType.ID, CORE_MAL, 92, 14, "var"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 92, 18),
-      new Token(TokenType.ID, CORE_MAL, 92, 20, "a1"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 92, 22),
-      new Token(TokenType.ID, CORE_MAL, 92, 23, "A2"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 92, 25),
-      new Token(TokenType.LET, CORE_MAL, 94, 5),
-      new Token(TokenType.ID, CORE_MAL, 94, 9, "var2"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 94, 14),
-      new Token(TokenType.ID, CORE_MAL, 94, 16, "var"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 94, 19),
-      new Token(TokenType.ID, CORE_MAL, 94, 20, "A3"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 94, 22),
-      new Token(TokenType.RCURLY, CORE_MAL, 95, 3),
-      new Token(TokenType.RCURLY, CORE_MAL, 96, 1),
-      new Token(TokenType.CATEGORY, CORE_MAL, 98, 1),
-      new Token(TokenType.ID, CORE_MAL, 98, 10, "C2"),
-      new Token(TokenType.ID, CORE_MAL, 99, 3, "developer"),
-      new Token(TokenType.INFO, CORE_MAL, 99, 13),
-      new Token(TokenType.COLON, CORE_MAL, 99, 17),
-      new Token(TokenType.STRING, CORE_MAL, 99, 19, "Reasoning for C2"),
-      new Token(TokenType.LCURLY, CORE_MAL, 100, 1),
-      new Token(TokenType.ASSET, CORE_MAL, 101, 3),
-      new Token(TokenType.ID, CORE_MAL, 101, 9, "A5"),
-      new Token(TokenType.EXTENDS, CORE_MAL, 101, 12),
-      new Token(TokenType.ID, CORE_MAL, 101, 20, "A4"),
-      new Token(TokenType.ID, CORE_MAL, 102, 5, "modeler"),
-      new Token(TokenType.INFO, CORE_MAL, 102, 13),
-      new Token(TokenType.COLON, CORE_MAL, 102, 17),
-      new Token(TokenType.STRING, CORE_MAL, 102, 19, "None for A5"),
-      new Token(TokenType.LCURLY, CORE_MAL, 103, 3),
-      new Token(TokenType.RCURLY, CORE_MAL, 103, 31),
-      new Token(TokenType.ABSTRACT, CORE_MAL, 105, 3),
-      new Token(TokenType.ASSET, CORE_MAL, 105, 12),
-      new Token(TokenType.ID, CORE_MAL, 105, 18, "A6"),
-      new Token(TokenType.EXTENDS, CORE_MAL, 105, 21),
-      new Token(TokenType.ID, CORE_MAL, 105, 29, "A4"),
-      new Token(TokenType.ID, CORE_MAL, 106, 5, "developer"),
-      new Token(TokenType.INFO, CORE_MAL, 106, 15),
-      new Token(TokenType.COLON, CORE_MAL, 106, 19),
-      new Token(TokenType.STRING, CORE_MAL, 106, 21, "Reasoning for A6"),
-      new Token(TokenType.LCURLY, CORE_MAL, 107, 3),
-      new Token(TokenType.RCURLY, CORE_MAL, 109, 3),
-      new Token(TokenType.RCURLY, CORE_MAL, 110, 1),
-      new Token(TokenType.CATEGORY, CORE_MAL, 112, 1),
-      new Token(TokenType.ID, CORE_MAL, 112, 10, "C3"),
-      new Token(TokenType.LCURLY, CORE_MAL, 112, 13),
-      new Token(TokenType.ASSET, CORE_MAL, 113, 3),
-      new Token(TokenType.ID, CORE_MAL, 113, 9, "A7"),
-      new Token(TokenType.EXTENDS, CORE_MAL, 113, 12),
-      new Token(TokenType.ID, CORE_MAL, 113, 20, "A3"),
-      new Token(TokenType.LCURLY, CORE_MAL, 113, 23),
-      new Token(TokenType.ANY, CORE_MAL, 114, 5),
-      new Token(TokenType.ID, CORE_MAL, 114, 7, "a7Attack"),
-      new Token(TokenType.OVERRIDE, CORE_MAL, 115, 7),
-      new Token(TokenType.ID, CORE_MAL, 115, 10, "a3Attack"),
-      new Token(TokenType.COMMA, CORE_MAL, 115, 18),
-      new Token(TokenType.ID, CORE_MAL, 116, 10, "otherAttack"),
-      new Token(TokenType.COMMA, CORE_MAL, 116, 21),
-      new Token(TokenType.ID, CORE_MAL, 117, 10, "a1"),
-      new Token(TokenType.DOT, CORE_MAL, 117, 12),
-      new Token(TokenType.ID, CORE_MAL, 117, 13, "destroy"),
-      new Token(TokenType.ANY, CORE_MAL, 118, 5),
-      new Token(TokenType.ID, CORE_MAL, 118, 7, "otherAttack"),
-      new Token(TokenType.LET, CORE_MAL, 120, 5),
-      new Token(TokenType.ID, CORE_MAL, 120, 9, "a3Attack"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 120, 18),
-      new Token(TokenType.ID, CORE_MAL, 120, 20, "a1Attack1"),
-      new Token(TokenType.LET, CORE_MAL, 122, 5),
-      new Token(TokenType.ID, CORE_MAL, 122, 9, "otherAttack"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 122, 21),
-      new Token(TokenType.ID, CORE_MAL, 122, 23, "a7Attack"),
-      new Token(TokenType.LET, CORE_MAL, 124, 5),
-      new Token(TokenType.ID, CORE_MAL, 124, 9, "a6"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 124, 12),
-      new Token(TokenType.ID, CORE_MAL, 124, 14, "a1Super"),
-      new Token(TokenType.DOT, CORE_MAL, 124, 21),
-      new Token(TokenType.ID, CORE_MAL, 124, 22, "a8"),
-      new Token(TokenType.LET, CORE_MAL, 126, 5),
-      new Token(TokenType.ID, CORE_MAL, 126, 9, "a1"),
-      new Token(TokenType.ASSIGN, CORE_MAL, 126, 12),
-      new Token(TokenType.ID, CORE_MAL, 126, 14, "a6"),
-      new Token(TokenType.DOT, CORE_MAL, 126, 16),
-      new Token(TokenType.ID, CORE_MAL, 126, 17, "a8Super"),
-      new Token(TokenType.RCURLY, CORE_MAL, 127, 3),
-      new Token(TokenType.ASSET, CORE_MAL, 129, 3),
-      new Token(TokenType.ID, CORE_MAL, 129, 9, "A8"),
-      new Token(TokenType.LCURLY, CORE_MAL, 129, 12),
-      new Token(TokenType.ALL, CORE_MAL, 130, 5),
-      new Token(TokenType.ID, CORE_MAL, 130, 7, "destroy"),
-      new Token(TokenType.LCURLY, CORE_MAL, 130, 15),
-      new Token(TokenType.C, CORE_MAL, 130, 16),
-      new Token(TokenType.COMMA, CORE_MAL, 130, 17),
-      new Token(TokenType.I, CORE_MAL, 130, 19),
-      new Token(TokenType.COMMA, CORE_MAL, 130, 20),
-      new Token(TokenType.A, CORE_MAL, 130, 22),
-      new Token(TokenType.RCURLY, CORE_MAL, 130, 23),
-      new Token(TokenType.LBRACKET, CORE_MAL, 130, 25),
-      new Token(TokenType.ID, CORE_MAL, 130, 26, "Exponential"),
-      new Token(TokenType.LPAREN, CORE_MAL, 130, 37),
-      new Token(TokenType.INT, CORE_MAL, 130, 38, 5),
-      new Token(TokenType.RPAREN, CORE_MAL, 130, 39),
+      new Token(TokenType.ID, CORE_MAL, 79, 3, "modeler"),
+      new Token(TokenType.INFO, CORE_MAL, 79, 11),
+      new Token(TokenType.COLON, CORE_MAL, 79, 15),
+      new Token(TokenType.STRING, CORE_MAL, 79, 17, "None for C2"),
+      new Token(TokenType.LCURLY, CORE_MAL, 80, 1),
+      new Token(TokenType.ABSTRACT, CORE_MAL, 81, 3),
+      new Token(TokenType.ASSET, CORE_MAL, 81, 12),
+      new Token(TokenType.ID, CORE_MAL, 81, 18, "A4"),
+      new Token(TokenType.ID, CORE_MAL, 82, 5, "modeler"),
+      new Token(TokenType.INFO, CORE_MAL, 82, 13),
+      new Token(TokenType.COLON, CORE_MAL, 82, 17),
+      new Token(TokenType.STRING, CORE_MAL, 82, 19, "None for A4"),
+      new Token(TokenType.ID, CORE_MAL, 83, 5, "developer"),
+      new Token(TokenType.INFO, CORE_MAL, 83, 15),
+      new Token(TokenType.COLON, CORE_MAL, 83, 19),
+      new Token(TokenType.STRING, CORE_MAL, 83, 21, "Reasoning for A4"),
+      new Token(TokenType.ID, CORE_MAL, 84, 5, "user"),
+      new Token(TokenType.INFO, CORE_MAL, 84, 10),
+      new Token(TokenType.COLON, CORE_MAL, 84, 14),
+      new Token(TokenType.STRING, CORE_MAL, 84, 16, "This is A4"),
+      new Token(TokenType.LCURLY, CORE_MAL, 85, 3),
+      new Token(TokenType.LET, CORE_MAL, 86, 5),
+      new Token(TokenType.ID, CORE_MAL, 86, 9, "var"),
+      new Token(TokenType.ASSIGN, CORE_MAL, 86, 13),
+      new Token(TokenType.ID, CORE_MAL, 86, 15, "a1"),
+      new Token(TokenType.DOT, CORE_MAL, 86, 17),
+      new Token(TokenType.ID, CORE_MAL, 86, 18, "a1Sub"),
+      new Token(TokenType.STAR, CORE_MAL, 86, 23),
+      new Token(TokenType.ANY, CORE_MAL, 87, 5),
+      new Token(TokenType.ID, CORE_MAL, 87, 7, "a"),
+      new Token(TokenType.OVERRIDE, CORE_MAL, 88, 7),
+      new Token(TokenType.LPAREN, CORE_MAL, 88, 10),
+      new Token(TokenType.ID, CORE_MAL, 88, 11, "var"),
+      new Token(TokenType.LPAREN, CORE_MAL, 88, 14),
+      new Token(TokenType.RPAREN, CORE_MAL, 88, 15),
+      new Token(TokenType.UNION, CORE_MAL, 88, 17),
+      new Token(TokenType.ID, CORE_MAL, 88, 20, "var2"),
+      new Token(TokenType.LPAREN, CORE_MAL, 88, 24),
+      new Token(TokenType.RPAREN, CORE_MAL, 88, 25),
+      new Token(TokenType.RPAREN, CORE_MAL, 88, 26),
+      new Token(TokenType.DOT, CORE_MAL, 88, 27),
+      new Token(TokenType.ID, CORE_MAL, 88, 28, "a1Attack1"),
+      new Token(TokenType.LET, CORE_MAL, 89, 5),
+      new Token(TokenType.ID, CORE_MAL, 89, 9, "var2"),
+      new Token(TokenType.ASSIGN, CORE_MAL, 89, 14),
+      new Token(TokenType.ID, CORE_MAL, 89, 16, "var"),
+      new Token(TokenType.LPAREN, CORE_MAL, 89, 19),
+      new Token(TokenType.RPAREN, CORE_MAL, 89, 20),
+      new Token(TokenType.LBRACKET, CORE_MAL, 89, 21),
+      new Token(TokenType.ID, CORE_MAL, 89, 22, "A3"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 89, 24),
+      new Token(TokenType.RCURLY, CORE_MAL, 90, 3),
+      new Token(TokenType.RCURLY, CORE_MAL, 91, 1),
+      new Token(TokenType.CATEGORY, CORE_MAL, 93, 1),
+      new Token(TokenType.ID, CORE_MAL, 93, 10, "C2"),
+      new Token(TokenType.ID, CORE_MAL, 94, 3, "developer"),
+      new Token(TokenType.INFO, CORE_MAL, 94, 13),
+      new Token(TokenType.COLON, CORE_MAL, 94, 17),
+      new Token(TokenType.STRING, CORE_MAL, 94, 19, "Reasoning for C2"),
+      new Token(TokenType.LCURLY, CORE_MAL, 95, 1),
+      new Token(TokenType.ASSET, CORE_MAL, 96, 3),
+      new Token(TokenType.ID, CORE_MAL, 96, 9, "A5"),
+      new Token(TokenType.EXTENDS, CORE_MAL, 96, 12),
+      new Token(TokenType.ID, CORE_MAL, 96, 20, "A4"),
+      new Token(TokenType.ID, CORE_MAL, 97, 5, "modeler"),
+      new Token(TokenType.INFO, CORE_MAL, 97, 13),
+      new Token(TokenType.COLON, CORE_MAL, 97, 17),
+      new Token(TokenType.STRING, CORE_MAL, 97, 19, "None for A5"),
+      new Token(TokenType.LCURLY, CORE_MAL, 98, 3),
+      new Token(TokenType.RCURLY, CORE_MAL, 98, 31),
+      new Token(TokenType.ABSTRACT, CORE_MAL, 100, 3),
+      new Token(TokenType.ASSET, CORE_MAL, 100, 12),
+      new Token(TokenType.ID, CORE_MAL, 100, 18, "A6"),
+      new Token(TokenType.EXTENDS, CORE_MAL, 100, 21),
+      new Token(TokenType.ID, CORE_MAL, 100, 29, "A4"),
+      new Token(TokenType.ID, CORE_MAL, 101, 5, "developer"),
+      new Token(TokenType.INFO, CORE_MAL, 101, 15),
+      new Token(TokenType.COLON, CORE_MAL, 101, 19),
+      new Token(TokenType.STRING, CORE_MAL, 101, 21, "Reasoning for A6"),
+      new Token(TokenType.LCURLY, CORE_MAL, 102, 3),
+      new Token(TokenType.RCURLY, CORE_MAL, 104, 3),
+      new Token(TokenType.RCURLY, CORE_MAL, 105, 1),
+      new Token(TokenType.CATEGORY, CORE_MAL, 107, 1),
+      new Token(TokenType.ID, CORE_MAL, 107, 10, "C3"),
+      new Token(TokenType.LCURLY, CORE_MAL, 107, 13),
+      new Token(TokenType.ASSET, CORE_MAL, 108, 3),
+      new Token(TokenType.ID, CORE_MAL, 108, 9, "A7"),
+      new Token(TokenType.EXTENDS, CORE_MAL, 108, 12),
+      new Token(TokenType.ID, CORE_MAL, 108, 20, "A3"),
+      new Token(TokenType.LCURLY, CORE_MAL, 108, 23),
+      new Token(TokenType.ANY, CORE_MAL, 109, 5),
+      new Token(TokenType.ID, CORE_MAL, 109, 7, "a7Attack"),
+      new Token(TokenType.OVERRIDE, CORE_MAL, 110, 7),
+      new Token(TokenType.ID, CORE_MAL, 110, 10, "a1"),
+      new Token(TokenType.LPAREN, CORE_MAL, 110, 12),
+      new Token(TokenType.RPAREN, CORE_MAL, 110, 13),
+      new Token(TokenType.DOT, CORE_MAL, 110, 14),
+      new Token(TokenType.ID, CORE_MAL, 110, 15, "destroy"),
+      new Token(TokenType.LET, CORE_MAL, 111, 5),
+      new Token(TokenType.ID, CORE_MAL, 111, 9, "a6"),
+      new Token(TokenType.ASSIGN, CORE_MAL, 111, 12),
+      new Token(TokenType.ID, CORE_MAL, 111, 14, "a1Super"),
+      new Token(TokenType.DOT, CORE_MAL, 111, 21),
+      new Token(TokenType.ID, CORE_MAL, 111, 22, "a8"),
+      new Token(TokenType.LET, CORE_MAL, 112, 5),
+      new Token(TokenType.ID, CORE_MAL, 112, 9, "a1"),
+      new Token(TokenType.ASSIGN, CORE_MAL, 112, 12),
+      new Token(TokenType.ID, CORE_MAL, 112, 14, "a6"),
+      new Token(TokenType.LPAREN, CORE_MAL, 112, 16),
+      new Token(TokenType.RPAREN, CORE_MAL, 112, 17),
+      new Token(TokenType.DOT, CORE_MAL, 112, 18),
+      new Token(TokenType.ID, CORE_MAL, 112, 19, "a8Super"),
+      new Token(TokenType.RCURLY, CORE_MAL, 113, 3),
+      new Token(TokenType.ASSET, CORE_MAL, 115, 3),
+      new Token(TokenType.ID, CORE_MAL, 115, 9, "A8"),
+      new Token(TokenType.LCURLY, CORE_MAL, 115, 12),
+      new Token(TokenType.ALL, CORE_MAL, 116, 5),
+      new Token(TokenType.ID, CORE_MAL, 116, 7, "destroy"),
+      new Token(TokenType.LCURLY, CORE_MAL, 116, 15),
+      new Token(TokenType.C, CORE_MAL, 116, 16),
+      new Token(TokenType.COMMA, CORE_MAL, 116, 17),
+      new Token(TokenType.I, CORE_MAL, 116, 19),
+      new Token(TokenType.COMMA, CORE_MAL, 116, 20),
+      new Token(TokenType.A, CORE_MAL, 116, 22),
+      new Token(TokenType.RCURLY, CORE_MAL, 116, 23),
+      new Token(TokenType.LBRACKET, CORE_MAL, 116, 25),
+      new Token(TokenType.ID, CORE_MAL, 116, 26, "Exponential"),
+      new Token(TokenType.LPAREN, CORE_MAL, 116, 37),
+      new Token(TokenType.INT, CORE_MAL, 116, 38, 5),
+      new Token(TokenType.RPAREN, CORE_MAL, 116, 39),
+      new Token(TokenType.RBRACKET, CORE_MAL, 116, 40),
+      new Token(TokenType.RCURLY, CORE_MAL, 117, 3),
+      new Token(TokenType.ASSET, CORE_MAL, 119, 3),
+      new Token(TokenType.ID, CORE_MAL, 119, 9, "A9"),
+      new Token(TokenType.LCURLY, CORE_MAL, 119, 12),
+      new Token(TokenType.RCURLY, CORE_MAL, 122, 3),
+      new Token(TokenType.RCURLY, CORE_MAL, 123, 1),
+      new Token(TokenType.ASSOCIATIONS, CORE_MAL, 125, 1),
+      new Token(TokenType.LCURLY, CORE_MAL, 125, 14),
+      new Token(TokenType.RCURLY, CORE_MAL, 125, 43),
+      new Token(TokenType.ASSOCIATIONS, CORE_MAL, 127, 1),
+      new Token(TokenType.LCURLY, CORE_MAL, 127, 14),
+      new Token(TokenType.ID, CORE_MAL, 129, 3, "A1"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 129, 6),
+      new Token(TokenType.ID, CORE_MAL, 129, 7, "a1"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 129, 9),
+      new Token(TokenType.INT, CORE_MAL, 129, 16, 1),
+      new Token(TokenType.LARROW, CORE_MAL, 129, 21),
+      new Token(TokenType.ID, CORE_MAL, 129, 25, "L1"),
+      new Token(TokenType.RARROW, CORE_MAL, 129, 28),
+      new Token(TokenType.INT, CORE_MAL, 129, 32, 1),
+      new Token(TokenType.RANGE, CORE_MAL, 129, 33),
+      new Token(TokenType.STAR, CORE_MAL, 129, 35),
+      new Token(TokenType.LBRACKET, CORE_MAL, 129, 37),
+      new Token(TokenType.ID, CORE_MAL, 129, 38, "a4"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 129, 40),
+      new Token(TokenType.ID, CORE_MAL, 129, 45, "A4"),
+      new Token(TokenType.ID, CORE_MAL, 130, 3, "A5"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 130, 6),
+      new Token(TokenType.ID, CORE_MAL, 130, 7, "a5"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 130, 9),
+      new Token(TokenType.INT, CORE_MAL, 130, 16, 1),
+      new Token(TokenType.RANGE, CORE_MAL, 130, 17),
+      new Token(TokenType.INT, CORE_MAL, 130, 19, 1),
+      new Token(TokenType.LARROW, CORE_MAL, 130, 21),
+      new Token(TokenType.ID, CORE_MAL, 130, 25, "L2"),
+      new Token(TokenType.RARROW, CORE_MAL, 130, 28),
+      new Token(TokenType.INT, CORE_MAL, 130, 32, 0),
+      new Token(TokenType.RANGE, CORE_MAL, 130, 33),
+      new Token(TokenType.STAR, CORE_MAL, 130, 35),
+      new Token(TokenType.LBRACKET, CORE_MAL, 130, 37),
+      new Token(TokenType.ID, CORE_MAL, 130, 38, "a6"),
       new Token(TokenType.RBRACKET, CORE_MAL, 130, 40),
-      new Token(TokenType.RCURLY, CORE_MAL, 131, 3),
-      new Token(TokenType.ASSET, CORE_MAL, 133, 3),
-      new Token(TokenType.ID, CORE_MAL, 133, 9, "A9"),
-      new Token(TokenType.LCURLY, CORE_MAL, 133, 12),
-      new Token(TokenType.RCURLY, CORE_MAL, 136, 3),
-      new Token(TokenType.RCURLY, CORE_MAL, 137, 1),
-      new Token(TokenType.ASSOCIATIONS, CORE_MAL, 139, 1),
-      new Token(TokenType.LCURLY, CORE_MAL, 139, 14),
-      new Token(TokenType.RCURLY, CORE_MAL, 139, 43),
-      new Token(TokenType.ASSOCIATIONS, CORE_MAL, 141, 1),
-      new Token(TokenType.LCURLY, CORE_MAL, 141, 14),
-      new Token(TokenType.ID, CORE_MAL, 143, 3, "A1"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 143, 6),
-      new Token(TokenType.ID, CORE_MAL, 143, 7, "a1"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 143, 9),
-      new Token(TokenType.INT, CORE_MAL, 143, 16, 1),
-      new Token(TokenType.LARROW, CORE_MAL, 143, 21),
-      new Token(TokenType.ID, CORE_MAL, 143, 25, "L1"),
-      new Token(TokenType.RARROW, CORE_MAL, 143, 28),
-      new Token(TokenType.INT, CORE_MAL, 143, 32, 1),
-      new Token(TokenType.RANGE, CORE_MAL, 143, 33),
-      new Token(TokenType.STAR, CORE_MAL, 143, 35),
-      new Token(TokenType.LBRACKET, CORE_MAL, 143, 37),
-      new Token(TokenType.ID, CORE_MAL, 143, 38, "a4"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 143, 40),
-      new Token(TokenType.ID, CORE_MAL, 143, 45, "A4"),
-      new Token(TokenType.ID, CORE_MAL, 144, 3, "A5"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 144, 6),
-      new Token(TokenType.ID, CORE_MAL, 144, 7, "a5"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 144, 9),
-      new Token(TokenType.INT, CORE_MAL, 144, 16, 1),
-      new Token(TokenType.RANGE, CORE_MAL, 144, 17),
-      new Token(TokenType.INT, CORE_MAL, 144, 19, 1),
-      new Token(TokenType.LARROW, CORE_MAL, 144, 21),
-      new Token(TokenType.ID, CORE_MAL, 144, 25, "L2"),
-      new Token(TokenType.RARROW, CORE_MAL, 144, 28),
-      new Token(TokenType.INT, CORE_MAL, 144, 32, 0),
-      new Token(TokenType.RANGE, CORE_MAL, 144, 33),
-      new Token(TokenType.STAR, CORE_MAL, 144, 35),
-      new Token(TokenType.LBRACKET, CORE_MAL, 144, 37),
-      new Token(TokenType.ID, CORE_MAL, 144, 38, "a6"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 144, 40),
-      new Token(TokenType.ID, CORE_MAL, 144, 45, "A6"),
-      new Token(TokenType.RCURLY, CORE_MAL, 145, 1),
-      new Token(TokenType.ASSOCIATIONS, CORE_MAL, 147, 1),
-      new Token(TokenType.LCURLY, CORE_MAL, 147, 14),
-      new Token(TokenType.ID, CORE_MAL, 149, 3, "A1"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 149, 6),
-      new Token(TokenType.ID, CORE_MAL, 149, 7, "a1Super"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 149, 14),
-      new Token(TokenType.INT, CORE_MAL, 149, 16, 0),
-      new Token(TokenType.RANGE, CORE_MAL, 149, 17),
-      new Token(TokenType.INT, CORE_MAL, 149, 19, 1),
-      new Token(TokenType.LARROW, CORE_MAL, 149, 21),
-      new Token(TokenType.ID, CORE_MAL, 149, 25, "L3"),
-      new Token(TokenType.RARROW, CORE_MAL, 149, 28),
-      new Token(TokenType.STAR, CORE_MAL, 149, 32),
-      new Token(TokenType.LBRACKET, CORE_MAL, 149, 37),
-      new Token(TokenType.ID, CORE_MAL, 149, 38, "a1Sub"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 149, 43),
-      new Token(TokenType.ID, CORE_MAL, 149, 47, "A1"),
-      new Token(TokenType.ID, CORE_MAL, 150, 3, "A3"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 150, 6),
-      new Token(TokenType.ID, CORE_MAL, 150, 7, "a3"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 150, 9),
-      new Token(TokenType.STAR, CORE_MAL, 150, 16),
-      new Token(TokenType.LARROW, CORE_MAL, 150, 21),
-      new Token(TokenType.ID, CORE_MAL, 150, 25, "L3"),
-      new Token(TokenType.RARROW, CORE_MAL, 150, 28),
-      new Token(TokenType.STAR, CORE_MAL, 150, 32),
-      new Token(TokenType.LBRACKET, CORE_MAL, 150, 37),
-      new Token(TokenType.ID, CORE_MAL, 150, 38, "a6"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 150, 40),
-      new Token(TokenType.ID, CORE_MAL, 150, 47, "A6"),
-      new Token(TokenType.ID, CORE_MAL, 151, 3, "A7"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 151, 6),
-      new Token(TokenType.ID, CORE_MAL, 151, 7, "a7"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 151, 9),
-      new Token(TokenType.INT, CORE_MAL, 151, 16, 0),
-      new Token(TokenType.RANGE, CORE_MAL, 151, 17),
-      new Token(TokenType.INT, CORE_MAL, 151, 19, 1),
-      new Token(TokenType.LARROW, CORE_MAL, 151, 21),
-      new Token(TokenType.ID, CORE_MAL, 151, 25, "L3"),
-      new Token(TokenType.RARROW, CORE_MAL, 151, 28),
-      new Token(TokenType.INT, CORE_MAL, 151, 32, 1),
-      new Token(TokenType.LBRACKET, CORE_MAL, 151, 37),
-      new Token(TokenType.ID, CORE_MAL, 151, 38, "a1"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 151, 40),
-      new Token(TokenType.ID, CORE_MAL, 151, 47, "A1"),
-      new Token(TokenType.ID, CORE_MAL, 152, 3, "A8"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 152, 6),
-      new Token(TokenType.ID, CORE_MAL, 152, 7, "a8"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 152, 9),
-      new Token(TokenType.STAR, CORE_MAL, 152, 16),
-      new Token(TokenType.LARROW, CORE_MAL, 152, 21),
-      new Token(TokenType.ID, CORE_MAL, 152, 25, "L4"),
-      new Token(TokenType.RARROW, CORE_MAL, 152, 28),
-      new Token(TokenType.STAR, CORE_MAL, 152, 32),
-      new Token(TokenType.LBRACKET, CORE_MAL, 152, 37),
-      new Token(TokenType.ID, CORE_MAL, 152, 38, "a1"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 152, 40),
-      new Token(TokenType.ID, CORE_MAL, 152, 47, "A1"),
-      new Token(TokenType.ID, CORE_MAL, 153, 3, "A8"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 153, 6),
-      new Token(TokenType.ID, CORE_MAL, 153, 7, "a8"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 153, 9),
-      new Token(TokenType.STAR, CORE_MAL, 153, 16),
-      new Token(TokenType.LARROW, CORE_MAL, 153, 21),
-      new Token(TokenType.ID, CORE_MAL, 153, 25, "L4"),
-      new Token(TokenType.RARROW, CORE_MAL, 153, 28),
-      new Token(TokenType.STAR, CORE_MAL, 153, 32),
-      new Token(TokenType.LBRACKET, CORE_MAL, 153, 37),
-      new Token(TokenType.ID, CORE_MAL, 153, 38, "a4"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 153, 40),
-      new Token(TokenType.ID, CORE_MAL, 153, 47, "A4"),
-      new Token(TokenType.ID, CORE_MAL, 154, 3, "A8"),
-      new Token(TokenType.LBRACKET, CORE_MAL, 154, 6),
-      new Token(TokenType.ID, CORE_MAL, 154, 7, "a8Sub"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 154, 12),
-      new Token(TokenType.STAR, CORE_MAL, 154, 16),
-      new Token(TokenType.LARROW, CORE_MAL, 154, 21),
-      new Token(TokenType.ID, CORE_MAL, 154, 25, "L4"),
-      new Token(TokenType.RARROW, CORE_MAL, 154, 28),
-      new Token(TokenType.STAR, CORE_MAL, 154, 32),
-      new Token(TokenType.LBRACKET, CORE_MAL, 154, 37),
-      new Token(TokenType.ID, CORE_MAL, 154, 38, "a8Super"),
-      new Token(TokenType.RBRACKET, CORE_MAL, 154, 45),
-      new Token(TokenType.ID, CORE_MAL, 154, 47, "A8"),
-      new Token(TokenType.RCURLY, CORE_MAL, 155, 1),
-      new Token(TokenType.EOF, CORE_MAL, 156, 1)
+      new Token(TokenType.ID, CORE_MAL, 130, 45, "A6"),
+      new Token(TokenType.RCURLY, CORE_MAL, 131, 1),
+      new Token(TokenType.ASSOCIATIONS, CORE_MAL, 133, 1),
+      new Token(TokenType.LCURLY, CORE_MAL, 133, 14),
+      new Token(TokenType.ID, CORE_MAL, 135, 3, "A1"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 135, 6),
+      new Token(TokenType.ID, CORE_MAL, 135, 7, "a1Super"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 135, 14),
+      new Token(TokenType.INT, CORE_MAL, 135, 16, 0),
+      new Token(TokenType.RANGE, CORE_MAL, 135, 17),
+      new Token(TokenType.INT, CORE_MAL, 135, 19, 1),
+      new Token(TokenType.LARROW, CORE_MAL, 135, 21),
+      new Token(TokenType.ID, CORE_MAL, 135, 25, "L3"),
+      new Token(TokenType.RARROW, CORE_MAL, 135, 28),
+      new Token(TokenType.STAR, CORE_MAL, 135, 32),
+      new Token(TokenType.LBRACKET, CORE_MAL, 135, 37),
+      new Token(TokenType.ID, CORE_MAL, 135, 38, "a1Sub"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 135, 43),
+      new Token(TokenType.ID, CORE_MAL, 135, 47, "A1"),
+      new Token(TokenType.ID, CORE_MAL, 136, 3, "A3"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 136, 6),
+      new Token(TokenType.ID, CORE_MAL, 136, 7, "a3"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 136, 9),
+      new Token(TokenType.STAR, CORE_MAL, 136, 16),
+      new Token(TokenType.LARROW, CORE_MAL, 136, 21),
+      new Token(TokenType.ID, CORE_MAL, 136, 25, "L3"),
+      new Token(TokenType.RARROW, CORE_MAL, 136, 28),
+      new Token(TokenType.STAR, CORE_MAL, 136, 32),
+      new Token(TokenType.LBRACKET, CORE_MAL, 136, 37),
+      new Token(TokenType.ID, CORE_MAL, 136, 38, "a6"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 136, 40),
+      new Token(TokenType.ID, CORE_MAL, 136, 47, "A6"),
+      new Token(TokenType.ID, CORE_MAL, 137, 3, "A7"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 137, 6),
+      new Token(TokenType.ID, CORE_MAL, 137, 7, "a7"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 137, 9),
+      new Token(TokenType.INT, CORE_MAL, 137, 16, 0),
+      new Token(TokenType.RANGE, CORE_MAL, 137, 17),
+      new Token(TokenType.INT, CORE_MAL, 137, 19, 1),
+      new Token(TokenType.LARROW, CORE_MAL, 137, 21),
+      new Token(TokenType.ID, CORE_MAL, 137, 25, "L3"),
+      new Token(TokenType.RARROW, CORE_MAL, 137, 28),
+      new Token(TokenType.INT, CORE_MAL, 137, 32, 1),
+      new Token(TokenType.LBRACKET, CORE_MAL, 137, 37),
+      new Token(TokenType.ID, CORE_MAL, 137, 38, "a1"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 137, 40),
+      new Token(TokenType.ID, CORE_MAL, 137, 47, "A1"),
+      new Token(TokenType.ID, CORE_MAL, 138, 3, "A8"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 138, 6),
+      new Token(TokenType.ID, CORE_MAL, 138, 7, "a8"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 138, 9),
+      new Token(TokenType.STAR, CORE_MAL, 138, 16),
+      new Token(TokenType.LARROW, CORE_MAL, 138, 21),
+      new Token(TokenType.ID, CORE_MAL, 138, 25, "L4"),
+      new Token(TokenType.RARROW, CORE_MAL, 138, 28),
+      new Token(TokenType.STAR, CORE_MAL, 138, 32),
+      new Token(TokenType.LBRACKET, CORE_MAL, 138, 37),
+      new Token(TokenType.ID, CORE_MAL, 138, 38, "a1"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 138, 40),
+      new Token(TokenType.ID, CORE_MAL, 138, 47, "A1"),
+      new Token(TokenType.ID, CORE_MAL, 139, 3, "A8"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 139, 6),
+      new Token(TokenType.ID, CORE_MAL, 139, 7, "a8"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 139, 9),
+      new Token(TokenType.STAR, CORE_MAL, 139, 16),
+      new Token(TokenType.LARROW, CORE_MAL, 139, 21),
+      new Token(TokenType.ID, CORE_MAL, 139, 25, "L4"),
+      new Token(TokenType.RARROW, CORE_MAL, 139, 28),
+      new Token(TokenType.STAR, CORE_MAL, 139, 32),
+      new Token(TokenType.LBRACKET, CORE_MAL, 139, 37),
+      new Token(TokenType.ID, CORE_MAL, 139, 38, "a4"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 139, 40),
+      new Token(TokenType.ID, CORE_MAL, 139, 47, "A4"),
+      new Token(TokenType.ID, CORE_MAL, 140, 3, "A8"),
+      new Token(TokenType.LBRACKET, CORE_MAL, 140, 6),
+      new Token(TokenType.ID, CORE_MAL, 140, 7, "a8Sub"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 140, 12),
+      new Token(TokenType.STAR, CORE_MAL, 140, 16),
+      new Token(TokenType.LARROW, CORE_MAL, 140, 21),
+      new Token(TokenType.ID, CORE_MAL, 140, 25, "L4"),
+      new Token(TokenType.RARROW, CORE_MAL, 140, 28),
+      new Token(TokenType.STAR, CORE_MAL, 140, 32),
+      new Token(TokenType.LBRACKET, CORE_MAL, 140, 37),
+      new Token(TokenType.ID, CORE_MAL, 140, 38, "a8Super"),
+      new Token(TokenType.RBRACKET, CORE_MAL, 140, 45),
+      new Token(TokenType.ID, CORE_MAL, 140, 47, "A8"),
+      new Token(TokenType.RCURLY, CORE_MAL, 141, 1),
+      new Token(TokenType.EOF, CORE_MAL, 142, 1)
     };
     assertTokens(tokens, "all-features/core.mal");
   }
@@ -635,6 +617,7 @@ public class TestAllFeatures extends MalTest {
   @Test
   public void testParser() {
     var ast = assertGetASTClassPath("all-features/all-features.mal");
+
     var categories = ast.getCategories();
     assertEquals(6, categories.size());
     assertCategory(
@@ -654,20 +637,20 @@ public class TestAllFeatures extends MalTest {
                     new Position(CORE_MAL, 4, 3),
                     new ID(new Position(CORE_MAL, 4, 3), "developer"),
                     "Reasoning for C1")),
-            new ArrayList<AST.Asset>()),
+            List.of()),
         categories.get(0));
     assertCategory(
         new AST.Category(
             new Position(CORE_MAL, 9, 1),
             new AST.ID(new Position(CORE_MAL, 9, 10), "C1"),
-            new ArrayList<AST.Meta>(),
+            Arrays.asList(),
             Arrays.asList(
                 new AST.Asset(
                     new Position(CORE_MAL, 10, 3),
                     false,
                     new AST.ID(new Position(CORE_MAL, 10, 9), "A1"),
                     Optional.empty(),
-                    new ArrayList<AST.Meta>(),
+                    Arrays.asList(),
                     Arrays.asList(
                         new AST.AttackStep(
                             new Position(CORE_MAL, 12, 5),
@@ -701,7 +684,7 @@ public class TestAllFeatures extends MalTest {
                                 new AST.TTCFuncExpr(
                                     new Position(CORE_MAL, 17, 25),
                                     new AST.ID(new Position(CORE_MAL, 17, 25), "Zero"),
-                                    new ArrayList<>())),
+                                    Arrays.asList())),
                             Arrays.asList(
                                 new AST.Meta(
                                     new Position(CORE_MAL, 18, 7),
@@ -712,7 +695,6 @@ public class TestAllFeatures extends MalTest {
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 19, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 19, 10),
@@ -742,7 +724,7 @@ public class TestAllFeatures extends MalTest {
                                 new AST.TTCFuncExpr(
                                     new Position(CORE_MAL, 20, 19),
                                     new AST.ID(new Position(CORE_MAL, 20, 19), "Bernoulli"),
-                                    Arrays.asList(Double.valueOf(0.5)))),
+                                    Arrays.asList(0.5))),
                             Arrays.asList(
                                 new AST.Meta(
                                     new Position(CORE_MAL, 21, 7),
@@ -760,14 +742,13 @@ public class TestAllFeatures extends MalTest {
                                 new AST.TTCFuncExpr(
                                     new Position(CORE_MAL, 23, 19),
                                     new AST.ID(new Position(CORE_MAL, 23, 19), "Disabled"),
-                                    List.of())),
-                            new ArrayList<AST.Meta>(),
+                                    Arrays.asList())),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 24, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 24, 10),
@@ -780,11 +761,10 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.of(
                                 new AST.Requires(
                                     new Position(CORE_MAL, 26, 7),
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 26, 10),
@@ -805,7 +785,6 @@ public class TestAllFeatures extends MalTest {
                             Optional.of(
                                 new AST.Requires(
                                     new Position(CORE_MAL, 30, 7),
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 30, 10),
@@ -831,7 +810,6 @@ public class TestAllFeatures extends MalTest {
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 31, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 31, 10),
@@ -863,11 +841,10 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.of(
                                 new AST.Requires(
                                     new Position(CORE_MAL, 33, 7),
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 33, 10),
@@ -900,11 +877,10 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.of(
                                 new AST.Requires(
                                     new Position(CORE_MAL, 36, 7),
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IntersectionExpr(
                                             new Position(CORE_MAL, 36, 10),
@@ -926,7 +902,6 @@ public class TestAllFeatures extends MalTest {
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 37, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 37, 10),
@@ -937,28 +912,27 @@ public class TestAllFeatures extends MalTest {
                                                 new Position(CORE_MAL, 37, 13),
                                                 new AST.ID(
                                                     new Position(CORE_MAL, 37, 13), "a")))))))),
-                    new ArrayList<AST.Variable>()),
+                    Arrays.asList()),
                 new AST.Asset(
                     new Position(CORE_MAL, 40, 3),
                     false,
                     new AST.ID(new Position(CORE_MAL, 40, 9), "A2"),
                     Optional.of(new AST.ID(new Position(CORE_MAL, 40, 20), "A1")),
-                    new ArrayList<AST.Meta>(),
+                    Arrays.asList(),
                     Arrays.asList(
                         new AST.AttackStep(
                             new Position(CORE_MAL, 42, 5),
                             AST.AttackStepType.ANY,
                             new AST.ID(new Position(CORE_MAL, 42, 7), "a1Attack1"),
                             List.of(),
-                            Optional.of(new ArrayList<AST.CIA>()),
+                            Optional.of(Arrays.asList()),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 43, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 43, 10),
@@ -978,13 +952,12 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.of(Arrays.asList(AST.CIA.C, AST.CIA.I, AST.CIA.A)),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 46, 7),
                                     true,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 46, 10),
@@ -1007,14 +980,13 @@ public class TestAllFeatures extends MalTest {
                                 new AST.TTCFuncExpr(
                                     new Position(CORE_MAL, 48, 19),
                                     new AST.ID(new Position(CORE_MAL, 48, 19), "Enabled"),
-                                    List.of())),
-                            new ArrayList<AST.Meta>(),
+                                    Arrays.asList())),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 49, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.StepExpr(
                                             new Position(CORE_MAL, 49, 10),
@@ -1040,13 +1012,12 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 52, 7),
                                     true,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 52, 10),
@@ -1059,11 +1030,10 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.of(
                                 new AST.Requires(
                                     new Position(CORE_MAL, 55, 7),
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 55, 10),
@@ -1072,7 +1042,6 @@ public class TestAllFeatures extends MalTest {
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 56, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 56, 10),
@@ -1085,11 +1054,10 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.of(
                                 new AST.Requires(
                                     new Position(CORE_MAL, 59, 8),
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 59, 11),
@@ -1098,13 +1066,12 @@ public class TestAllFeatures extends MalTest {
                                 new AST.Reaches(
                                     new Position(CORE_MAL, 60, 8),
                                     true,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
                                         new AST.IDExpr(
                                             new Position(CORE_MAL, 60, 11),
                                             new AST.ID(
                                                 new Position(CORE_MAL, 60, 11), "a1Defense1"))))))),
-                    new ArrayList<AST.Variable>()),
+                    Arrays.asList()),
                 new AST.Asset(
                     new Position(CORE_MAL, 63, 3),
                     true,
@@ -1123,39 +1090,32 @@ public class TestAllFeatures extends MalTest {
                             List.of(),
                             Optional.of(Arrays.asList(AST.CIA.A, AST.CIA.I, AST.CIA.C)),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.empty()),
                         new AST.AttackStep(
-                            new Position(CORE_MAL, 72, 5),
+                            new Position(CORE_MAL, 71, 5),
                             AST.AttackStepType.ALL,
-                            new AST.ID(new Position(CORE_MAL, 72, 7), "AT"),
+                            new AST.ID(new Position(CORE_MAL, 71, 7), "AT"),
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
-                                    new Position(CORE_MAL, 73, 7),
+                                    new Position(CORE_MAL, 72, 7),
                                     false,
                                     Arrays.asList(
-                                        new AST.Variable(
-                                            new Position(CORE_MAL, 73, 10),
-                                            new AST.ID(new Position(CORE_MAL, 73, 14), "V1"),
-                                            new AST.IDExpr(
-                                                new Position(CORE_MAL, 73, 19),
-                                                new AST.ID(new Position(CORE_MAL, 73, 19), "V2")))),
-                                    Arrays.asList(
                                         new AST.StepExpr(
-                                            new Position(CORE_MAL, 74, 10),
+                                            new Position(CORE_MAL, 72, 10),
+                                            new AST.CallExpr(
+                                                new Position(CORE_MAL, 72, 10),
+                                                new AST.ID(new Position(CORE_MAL, 72, 10), "V1")),
                                             new AST.IDExpr(
-                                                new Position(CORE_MAL, 74, 10),
-                                                new AST.ID(new Position(CORE_MAL, 74, 10), "V1")),
-                                            new AST.IDExpr(
-                                                new Position(CORE_MAL, 74, 13),
+                                                new Position(CORE_MAL, 72, 15),
                                                 new AST.ID(
-                                                    new Position(CORE_MAL, 74, 13),
+                                                    new Position(CORE_MAL, 72, 15),
                                                     "a1Attack1")))))))),
                     Arrays.asList(
                         new AST.Variable(
@@ -1176,372 +1136,324 @@ public class TestAllFeatures extends MalTest {
                         new AST.Variable(
                             new Position(CORE_MAL, 70, 5),
                             new AST.ID(new Position(CORE_MAL, 70, 9), "V1"),
-                            new AST.IDExpr(
+                            new AST.CallExpr(
                                 new Position(CORE_MAL, 70, 14),
-                                new AST.ID(new Position(CORE_MAL, 70, 14), "used"))),
-                        new AST.Variable(
-                            new Position(CORE_MAL, 71, 5),
-                            new AST.ID(new Position(CORE_MAL, 71, 9), "V2"),
-                            new AST.IDExpr(
-                                new Position(CORE_MAL, 71, 14),
-                                new AST.ID(new Position(CORE_MAL, 71, 14), "V1"))))))),
+                                new AST.ID(new Position(CORE_MAL, 70, 14), "used"))))))),
         categories.get(1));
+    assertCategory(
+        new AST.Category(
+            new Position(CORE_MAL, 76, 1),
+            new AST.ID(new Position(CORE_MAL, 76, 10), "C2"),
+            Arrays.asList(),
+            Arrays.asList()),
+        categories.get(2));
     assertCategory(
         new AST.Category(
             new Position(CORE_MAL, 78, 1),
             new AST.ID(new Position(CORE_MAL, 78, 10), "C2"),
-            new ArrayList<AST.Meta>(),
-            new ArrayList<AST.Asset>()),
-        categories.get(2));
-    assertCategory(
-        new AST.Category(
-            new Position(CORE_MAL, 80, 1),
-            new AST.ID(new Position(CORE_MAL, 80, 10), "C2"),
             Arrays.asList(
                 new AST.Meta(
-                    new Position(CORE_MAL, 81, 3),
-                    new ID(new Position(CORE_MAL, 81, 3), "modeler"),
+                    new Position(CORE_MAL, 79, 3),
+                    new ID(new Position(CORE_MAL, 79, 3), "modeler"),
                     "None for C2")),
             Arrays.asList(
                 new AST.Asset(
-                    new Position(CORE_MAL, 83, 3),
+                    new Position(CORE_MAL, 81, 3),
                     true,
-                    new AST.ID(new Position(CORE_MAL, 83, 18), "A4"),
+                    new AST.ID(new Position(CORE_MAL, 81, 18), "A4"),
                     Optional.empty(),
                     Arrays.asList(
                         new AST.Meta(
-                            new Position(CORE_MAL, 84, 5),
-                            new ID(new Position(CORE_MAL, 84, 5), "modeler"),
+                            new Position(CORE_MAL, 82, 5),
+                            new ID(new Position(CORE_MAL, 82, 5), "modeler"),
                             "None for A4"),
                         new AST.Meta(
-                            new Position(CORE_MAL, 85, 5),
-                            new ID(new Position(CORE_MAL, 85, 5), "developer"),
+                            new Position(CORE_MAL, 83, 5),
+                            new ID(new Position(CORE_MAL, 83, 5), "developer"),
                             "Reasoning for A4"),
                         new AST.Meta(
-                            new Position(CORE_MAL, 86, 5),
-                            new ID(new Position(CORE_MAL, 86, 5), "user"),
+                            new Position(CORE_MAL, 84, 5),
+                            new ID(new Position(CORE_MAL, 84, 5), "user"),
                             "This is A4")),
                     Arrays.asList(
                         new AST.AttackStep(
-                            new Position(CORE_MAL, 89, 5),
+                            new Position(CORE_MAL, 87, 5),
                             AST.AttackStepType.ANY,
-                            new AST.ID(new Position(CORE_MAL, 89, 7), "a"),
+                            new AST.ID(new Position(CORE_MAL, 87, 7), "a"),
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
-                                    new Position(CORE_MAL, 90, 7),
+                                    new Position(CORE_MAL, 88, 7),
                                     false,
                                     Arrays.asList(
-                                        new AST.Variable(
-                                            new Position(CORE_MAL, 92, 10),
-                                            new AST.ID(new Position(CORE_MAL, 92, 14), "var"),
-                                            new AST.SubTypeExpr(
-                                                new Position(CORE_MAL, 92, 20),
-                                                new AST.IDExpr(
-                                                    new Position(CORE_MAL, 92, 20),
-                                                    new AST.ID(
-                                                        new Position(CORE_MAL, 92, 20), "a1")),
-                                                new AST.ID(new Position(CORE_MAL, 92, 23), "A2")))),
-                                    Arrays.asList(
                                         new AST.StepExpr(
-                                            new Position(CORE_MAL, 90, 10),
+                                            new Position(CORE_MAL, 88, 10),
                                             new AST.UnionExpr(
-                                                new Position(CORE_MAL, 90, 11),
-                                                new AST.IDExpr(
-                                                    new Position(CORE_MAL, 90, 11),
+                                                new Position(CORE_MAL, 88, 11),
+                                                new AST.CallExpr(
+                                                    new Position(CORE_MAL, 88, 11),
                                                     new AST.ID(
-                                                        new Position(CORE_MAL, 90, 11), "var")),
-                                                new AST.IDExpr(
-                                                    new Position(CORE_MAL, 90, 18),
+                                                        new Position(CORE_MAL, 88, 11), "var")),
+                                                new AST.CallExpr(
+                                                    new Position(CORE_MAL, 88, 20),
                                                     new AST.ID(
-                                                        new Position(CORE_MAL, 90, 18), "var2"))),
+                                                        new Position(CORE_MAL, 88, 20), "var2"))),
                                             new AST.IDExpr(
-                                                new Position(CORE_MAL, 90, 24),
+                                                new Position(CORE_MAL, 88, 28),
                                                 new AST.ID(
-                                                    new Position(CORE_MAL, 90, 24),
+                                                    new Position(CORE_MAL, 88, 28),
                                                     "a1Attack1")))))))),
                     Arrays.asList(
                         new AST.Variable(
-                            new Position(CORE_MAL, 88, 5),
-                            new AST.ID(new Position(CORE_MAL, 88, 9), "var"),
+                            new Position(CORE_MAL, 86, 5),
+                            new AST.ID(new Position(CORE_MAL, 86, 9), "var"),
                             new AST.StepExpr(
-                                new Position(CORE_MAL, 88, 15),
+                                new Position(CORE_MAL, 86, 15),
                                 new AST.IDExpr(
-                                    new Position(CORE_MAL, 88, 15),
-                                    new AST.ID(new Position(CORE_MAL, 88, 15), "a1")),
+                                    new Position(CORE_MAL, 86, 15),
+                                    new AST.ID(new Position(CORE_MAL, 86, 15), "a1")),
                                 new AST.TransitiveExpr(
-                                    new Position(CORE_MAL, 88, 18),
+                                    new Position(CORE_MAL, 86, 18),
                                     new AST.IDExpr(
-                                        new Position(CORE_MAL, 88, 18),
-                                        new AST.ID(new Position(CORE_MAL, 88, 18), "a1Sub"))))),
+                                        new Position(CORE_MAL, 86, 18),
+                                        new AST.ID(new Position(CORE_MAL, 86, 18), "a1Sub"))))),
                         new AST.Variable(
-                            new Position(CORE_MAL, 94, 5),
-                            new AST.ID(new Position(CORE_MAL, 94, 9), "var2"),
+                            new Position(CORE_MAL, 89, 5),
+                            new AST.ID(new Position(CORE_MAL, 89, 9), "var2"),
                             new AST.SubTypeExpr(
-                                new Position(CORE_MAL, 94, 16),
-                                new AST.IDExpr(
-                                    new Position(CORE_MAL, 94, 16),
-                                    new AST.ID(new Position(CORE_MAL, 94, 16), "var")),
-                                new AST.ID(new Position(CORE_MAL, 94, 20), "A3"))))))),
+                                new Position(CORE_MAL, 89, 16),
+                                new AST.CallExpr(
+                                    new Position(CORE_MAL, 89, 16),
+                                    new AST.ID(new Position(CORE_MAL, 89, 16), "var")),
+                                new AST.ID(new Position(CORE_MAL, 89, 22), "A3"))))))),
         categories.get(3));
     assertCategory(
         new AST.Category(
-            new Position(CORE_MAL, 98, 1),
-            new AST.ID(new Position(CORE_MAL, 98, 10), "C2"),
+            new Position(CORE_MAL, 93, 1),
+            new AST.ID(new Position(CORE_MAL, 93, 10), "C2"),
             Arrays.asList(
                 new AST.Meta(
-                    new Position(CORE_MAL, 99, 3),
-                    new ID(new Position(CORE_MAL, 99, 3), "developer"),
+                    new Position(CORE_MAL, 94, 3),
+                    new ID(new Position(CORE_MAL, 94, 3), "developer"),
                     "Reasoning for C2")),
             Arrays.asList(
                 new AST.Asset(
-                    new Position(CORE_MAL, 101, 3),
+                    new Position(CORE_MAL, 96, 3),
                     false,
-                    new AST.ID(new Position(CORE_MAL, 101, 9), "A5"),
-                    Optional.of(new AST.ID(new Position(CORE_MAL, 101, 20), "A4")),
+                    new AST.ID(new Position(CORE_MAL, 96, 9), "A5"),
+                    Optional.of(new AST.ID(new Position(CORE_MAL, 96, 20), "A4")),
                     Arrays.asList(
                         new AST.Meta(
-                            new Position(CORE_MAL, 102, 5),
-                            new ID(new Position(CORE_MAL, 102, 5), "modeler"),
+                            new Position(CORE_MAL, 97, 5),
+                            new ID(new Position(CORE_MAL, 97, 5), "modeler"),
                             "None for A5")),
-                    new ArrayList<AST.AttackStep>(),
-                    new ArrayList<AST.Variable>()),
+                    Arrays.asList(),
+                    Arrays.asList()),
                 new AST.Asset(
-                    new Position(CORE_MAL, 105, 3),
+                    new Position(CORE_MAL, 100, 3),
                     true,
-                    new AST.ID(new Position(CORE_MAL, 105, 18), "A6"),
-                    Optional.of(new AST.ID(new Position(CORE_MAL, 105, 29), "A4")),
+                    new AST.ID(new Position(CORE_MAL, 100, 18), "A6"),
+                    Optional.of(new AST.ID(new Position(CORE_MAL, 100, 29), "A4")),
                     Arrays.asList(
                         new AST.Meta(
-                            new Position(CORE_MAL, 106, 5),
-                            new ID(new Position(CORE_MAL, 106, 5), "developer"),
+                            new Position(CORE_MAL, 101, 5),
+                            new ID(new Position(CORE_MAL, 101, 5), "developer"),
                             "Reasoning for A6")),
-                    new ArrayList<AST.AttackStep>(),
-                    new ArrayList<AST.Variable>()))),
+                    Arrays.asList(),
+                    Arrays.asList()))),
         categories.get(4));
     assertCategory(
         new AST.Category(
-            new Position(CORE_MAL, 112, 1),
-            new AST.ID(new Position(CORE_MAL, 112, 10), "C3"),
-            new ArrayList<AST.Meta>(),
+            new Position(CORE_MAL, 107, 1),
+            new AST.ID(new Position(CORE_MAL, 107, 10), "C3"),
+            Arrays.asList(),
             Arrays.asList(
                 new AST.Asset(
-                    new Position(CORE_MAL, 113, 3),
+                    new Position(CORE_MAL, 108, 3),
                     false,
-                    new AST.ID(new Position(CORE_MAL, 113, 9), "A7"),
-                    Optional.of(new AST.ID(new Position(CORE_MAL, 113, 20), "A3")),
-                    new ArrayList<AST.Meta>(),
+                    new AST.ID(new Position(CORE_MAL, 108, 9), "A7"),
+                    Optional.of(new AST.ID(new Position(CORE_MAL, 108, 20), "A3")),
+                    Arrays.asList(),
                     Arrays.asList(
                         new AST.AttackStep(
-                            new Position(CORE_MAL, 114, 5),
+                            new Position(CORE_MAL, 109, 5),
                             AST.AttackStepType.ANY,
-                            new AST.ID(new Position(CORE_MAL, 114, 7), "a7Attack"),
+                            new AST.ID(new Position(CORE_MAL, 109, 7), "a7Attack"),
                             List.of(),
                             Optional.empty(),
                             Optional.empty(),
-                            new ArrayList<AST.Meta>(),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.of(
                                 new AST.Reaches(
-                                    new Position(CORE_MAL, 115, 7),
+                                    new Position(CORE_MAL, 110, 7),
                                     false,
-                                    new ArrayList<AST.Variable>(),
                                     Arrays.asList(
-                                        new AST.IDExpr(
-                                            new Position(CORE_MAL, 115, 10),
-                                            new AST.ID(
-                                                new Position(CORE_MAL, 115, 10), "a3Attack")),
-                                        new AST.IDExpr(
-                                            new Position(CORE_MAL, 116, 10),
-                                            new AST.ID(
-                                                new Position(CORE_MAL, 116, 10), "otherAttack")),
                                         new AST.StepExpr(
-                                            new Position(CORE_MAL, 117, 10),
+                                            new Position(CORE_MAL, 110, 10),
+                                            new AST.CallExpr(
+                                                new Position(CORE_MAL, 110, 10),
+                                                new AST.ID(new Position(CORE_MAL, 110, 10), "a1")),
                                             new AST.IDExpr(
-                                                new Position(CORE_MAL, 117, 10),
-                                                new AST.ID(new Position(CORE_MAL, 117, 10), "a1")),
-                                            new AST.IDExpr(
-                                                new Position(CORE_MAL, 117, 13),
+                                                new Position(CORE_MAL, 110, 15),
                                                 new AST.ID(
-                                                    new Position(CORE_MAL, 117, 13),
-                                                    "destroy"))))))),
-                        new AST.AttackStep(
-                            new Position(CORE_MAL, 118, 5),
-                            AST.AttackStepType.ANY,
-                            new AST.ID(new Position(CORE_MAL, 118, 7), "otherAttack"),
-                            List.of(),
-                            Optional.empty(),
-                            Optional.empty(),
-                            new ArrayList<AST.Meta>(),
-                            Optional.empty(),
-                            Optional.empty())),
+                                                    new Position(CORE_MAL, 110, 15),
+                                                    "destroy")))))))),
                     Arrays.asList(
                         new AST.Variable(
-                            new Position(CORE_MAL, 120, 5),
-                            new AST.ID(new Position(CORE_MAL, 120, 9), "a3Attack"),
-                            new AST.IDExpr(
-                                new Position(CORE_MAL, 120, 20),
-                                new AST.ID(new Position(CORE_MAL, 120, 20), "a1Attack1"))),
-                        new AST.Variable(
-                            new Position(CORE_MAL, 122, 5),
-                            new AST.ID(new Position(CORE_MAL, 122, 9), "otherAttack"),
-                            new AST.IDExpr(
-                                new Position(CORE_MAL, 122, 23),
-                                new AST.ID(new Position(CORE_MAL, 122, 23), "a7Attack"))),
-                        new AST.Variable(
-                            new Position(CORE_MAL, 124, 5),
-                            new AST.ID(new Position(CORE_MAL, 124, 9), "a6"),
+                            new Position(CORE_MAL, 111, 5),
+                            new AST.ID(new Position(CORE_MAL, 111, 9), "a6"),
                             new AST.StepExpr(
-                                new Position(CORE_MAL, 124, 14),
+                                new Position(CORE_MAL, 111, 14),
                                 new AST.IDExpr(
-                                    new Position(CORE_MAL, 124, 14),
-                                    new AST.ID(new Position(CORE_MAL, 124, 14), "a1Super")),
+                                    new Position(CORE_MAL, 111, 14),
+                                    new AST.ID(new Position(CORE_MAL, 111, 14), "a1Super")),
                                 new AST.IDExpr(
-                                    new Position(CORE_MAL, 124, 22),
-                                    new AST.ID(new Position(CORE_MAL, 124, 22), "a8")))),
+                                    new Position(CORE_MAL, 111, 22),
+                                    new AST.ID(new Position(CORE_MAL, 111, 22), "a8")))),
                         new AST.Variable(
-                            new Position(CORE_MAL, 126, 5),
-                            new AST.ID(new Position(CORE_MAL, 126, 9), "a1"),
+                            new Position(CORE_MAL, 112, 5),
+                            new AST.ID(new Position(CORE_MAL, 112, 9), "a1"),
                             new AST.StepExpr(
-                                new Position(CORE_MAL, 126, 14),
+                                new Position(CORE_MAL, 112, 14),
+                                new AST.CallExpr(
+                                    new Position(CORE_MAL, 112, 14),
+                                    new AST.ID(new Position(CORE_MAL, 112, 14), "a6")),
                                 new AST.IDExpr(
-                                    new Position(CORE_MAL, 126, 14),
-                                    new AST.ID(new Position(CORE_MAL, 126, 14), "a6")),
-                                new AST.IDExpr(
-                                    new Position(CORE_MAL, 126, 17),
-                                    new AST.ID(new Position(CORE_MAL, 126, 17), "a8Super")))))),
+                                    new Position(CORE_MAL, 112, 19),
+                                    new AST.ID(new Position(CORE_MAL, 112, 19), "a8Super")))))),
                 new AST.Asset(
-                    new Position(CORE_MAL, 129, 3),
+                    new Position(CORE_MAL, 115, 3),
                     false,
-                    new AST.ID(new Position(CORE_MAL, 129, 9), "A8"),
+                    new AST.ID(new Position(CORE_MAL, 115, 9), "A8"),
                     Optional.empty(),
-                    new ArrayList<AST.Meta>(),
+                    Arrays.asList(),
                     Arrays.asList(
                         new AST.AttackStep(
-                            new Position(CORE_MAL, 130, 5),
+                            new Position(CORE_MAL, 116, 5),
                             AST.AttackStepType.ALL,
-                            new AST.ID(new Position(CORE_MAL, 130, 7), "destroy"),
+                            new AST.ID(new Position(CORE_MAL, 116, 7), "destroy"),
                             List.of(),
                             Optional.of(Arrays.asList(AST.CIA.C, AST.CIA.I, AST.CIA.A)),
                             Optional.of(
                                 new AST.TTCFuncExpr(
-                                    new Position(CORE_MAL, 130, 26),
-                                    new AST.ID(new Position(CORE_MAL, 130, 26), "Exponential"),
-                                    Arrays.asList(Double.valueOf(5)))),
-                            new ArrayList<AST.Meta>(),
+                                    new Position(CORE_MAL, 116, 26),
+                                    new AST.ID(new Position(CORE_MAL, 116, 26), "Exponential"),
+                                    Arrays.asList(5.0))),
+                            Arrays.asList(),
                             Optional.empty(),
                             Optional.empty())),
-                    new ArrayList<AST.Variable>()),
+                    Arrays.asList()),
                 new AST.Asset(
-                    new Position(CORE_MAL, 133, 3),
+                    new Position(CORE_MAL, 119, 3),
                     false,
-                    new AST.ID(new Position(CORE_MAL, 133, 9), "A9"),
+                    new AST.ID(new Position(CORE_MAL, 119, 9), "A9"),
                     Optional.empty(),
-                    new ArrayList<AST.Meta>(),
-                    new ArrayList<AST.AttackStep>(),
-                    new ArrayList<AST.Variable>()))),
+                    Arrays.asList(),
+                    Arrays.asList(),
+                    Arrays.asList()))),
         categories.get(5));
     var associations = ast.getAssociations();
     assertEquals(8, associations.size());
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 143, 3),
-            new AST.ID(new Position(CORE_MAL, 143, 3), "A1"),
-            new AST.ID(new Position(CORE_MAL, 143, 7), "a1"),
+            new Position(CORE_MAL, 129, 3),
+            new AST.ID(new Position(CORE_MAL, 129, 3), "A1"),
+            new AST.ID(new Position(CORE_MAL, 129, 7), "a1"),
             AST.Multiplicity.ONE,
-            new AST.ID(new Position(CORE_MAL, 143, 25), "L1"),
+            new AST.ID(new Position(CORE_MAL, 129, 25), "L1"),
             AST.Multiplicity.ONE_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 143, 38), "a4"),
-            new AST.ID(new Position(CORE_MAL, 143, 45), "A4"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 129, 38), "a4"),
+            new AST.ID(new Position(CORE_MAL, 129, 45), "A4"),
+            Arrays.asList()),
         associations.get(0));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 144, 3),
-            new AST.ID(new Position(CORE_MAL, 144, 3), "A5"),
-            new AST.ID(new Position(CORE_MAL, 144, 7), "a5"),
+            new Position(CORE_MAL, 130, 3),
+            new AST.ID(new Position(CORE_MAL, 130, 3), "A5"),
+            new AST.ID(new Position(CORE_MAL, 130, 7), "a5"),
             AST.Multiplicity.ONE,
-            new AST.ID(new Position(CORE_MAL, 144, 25), "L2"),
+            new AST.ID(new Position(CORE_MAL, 130, 25), "L2"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 144, 38), "a6"),
-            new AST.ID(new Position(CORE_MAL, 144, 45), "A6"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 130, 38), "a6"),
+            new AST.ID(new Position(CORE_MAL, 130, 45), "A6"),
+            Arrays.asList()),
         associations.get(1));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 149, 3),
-            new AST.ID(new Position(CORE_MAL, 149, 3), "A1"),
-            new AST.ID(new Position(CORE_MAL, 149, 7), "a1Super"),
+            new Position(CORE_MAL, 135, 3),
+            new AST.ID(new Position(CORE_MAL, 135, 3), "A1"),
+            new AST.ID(new Position(CORE_MAL, 135, 7), "a1Super"),
             AST.Multiplicity.ZERO_OR_ONE,
-            new AST.ID(new Position(CORE_MAL, 149, 25), "L3"),
+            new AST.ID(new Position(CORE_MAL, 135, 25), "L3"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 149, 38), "a1Sub"),
-            new AST.ID(new Position(CORE_MAL, 149, 47), "A1"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 135, 38), "a1Sub"),
+            new AST.ID(new Position(CORE_MAL, 135, 47), "A1"),
+            Arrays.asList()),
         associations.get(2));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 150, 3),
-            new AST.ID(new Position(CORE_MAL, 150, 3), "A3"),
-            new AST.ID(new Position(CORE_MAL, 150, 7), "a3"),
+            new Position(CORE_MAL, 136, 3),
+            new AST.ID(new Position(CORE_MAL, 136, 3), "A3"),
+            new AST.ID(new Position(CORE_MAL, 136, 7), "a3"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 150, 25), "L3"),
+            new AST.ID(new Position(CORE_MAL, 136, 25), "L3"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 150, 38), "a6"),
-            new AST.ID(new Position(CORE_MAL, 150, 47), "A6"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 136, 38), "a6"),
+            new AST.ID(new Position(CORE_MAL, 136, 47), "A6"),
+            Arrays.asList()),
         associations.get(3));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 151, 3),
-            new AST.ID(new Position(CORE_MAL, 151, 3), "A7"),
-            new AST.ID(new Position(CORE_MAL, 151, 7), "a7"),
+            new Position(CORE_MAL, 137, 3),
+            new AST.ID(new Position(CORE_MAL, 137, 3), "A7"),
+            new AST.ID(new Position(CORE_MAL, 137, 7), "a7"),
             AST.Multiplicity.ZERO_OR_ONE,
-            new AST.ID(new Position(CORE_MAL, 151, 25), "L3"),
+            new AST.ID(new Position(CORE_MAL, 137, 25), "L3"),
             AST.Multiplicity.ONE,
-            new AST.ID(new Position(CORE_MAL, 151, 38), "a1"),
-            new AST.ID(new Position(CORE_MAL, 151, 47), "A1"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 137, 38), "a1"),
+            new AST.ID(new Position(CORE_MAL, 137, 47), "A1"),
+            Arrays.asList()),
         associations.get(4));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 152, 3),
-            new AST.ID(new Position(CORE_MAL, 152, 3), "A8"),
-            new AST.ID(new Position(CORE_MAL, 152, 7), "a8"),
+            new Position(CORE_MAL, 138, 3),
+            new AST.ID(new Position(CORE_MAL, 138, 3), "A8"),
+            new AST.ID(new Position(CORE_MAL, 138, 7), "a8"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 152, 25), "L4"),
+            new AST.ID(new Position(CORE_MAL, 138, 25), "L4"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 152, 38), "a1"),
-            new AST.ID(new Position(CORE_MAL, 152, 47), "A1"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 138, 38), "a1"),
+            new AST.ID(new Position(CORE_MAL, 138, 47), "A1"),
+            Arrays.asList()),
         associations.get(5));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 153, 3),
-            new AST.ID(new Position(CORE_MAL, 153, 3), "A8"),
-            new AST.ID(new Position(CORE_MAL, 153, 7), "a8"),
+            new Position(CORE_MAL, 139, 3),
+            new AST.ID(new Position(CORE_MAL, 139, 3), "A8"),
+            new AST.ID(new Position(CORE_MAL, 139, 7), "a8"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 153, 25), "L4"),
+            new AST.ID(new Position(CORE_MAL, 139, 25), "L4"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 153, 38), "a4"),
-            new AST.ID(new Position(CORE_MAL, 153, 47), "A4"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 139, 38), "a4"),
+            new AST.ID(new Position(CORE_MAL, 139, 47), "A4"),
+            Arrays.asList()),
         associations.get(6));
     assertAssociation(
         new AST.Association(
-            new Position(CORE_MAL, 154, 3),
-            new AST.ID(new Position(CORE_MAL, 154, 3), "A8"),
-            new AST.ID(new Position(CORE_MAL, 154, 7), "a8Sub"),
+            new Position(CORE_MAL, 140, 3),
+            new AST.ID(new Position(CORE_MAL, 140, 3), "A8"),
+            new AST.ID(new Position(CORE_MAL, 140, 7), "a8Sub"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 154, 25), "L4"),
+            new AST.ID(new Position(CORE_MAL, 140, 25), "L4"),
             AST.Multiplicity.ZERO_OR_MORE,
-            new AST.ID(new Position(CORE_MAL, 154, 38), "a8Super"),
-            new AST.ID(new Position(CORE_MAL, 154, 47), "A8"),
-            new ArrayList<AST.Meta>()),
+            new AST.ID(new Position(CORE_MAL, 140, 38), "a8Super"),
+            new AST.ID(new Position(CORE_MAL, 140, 47), "A8"),
+            Arrays.asList()),
         associations.get(7));
     var defines = ast.getDefines();
     assertEquals(4, defines.size());
@@ -1577,14 +1489,10 @@ public class TestAllFeatures extends MalTest {
     assertEmptyOut();
     String[] lines = {
       "[ANALYZER WARNING] <core.mal:66:9> Variable 'unused' is never used",
-      "[ANALYZER WARNING] <core.mal:78:10> Category 'C2' contains no assets or metadata",
-      "[ANALYZER WARNING] <core.mal:105:18> Asset 'A6' is abstract but never extended to",
-      "[ANALYZER WARNING] <core.mal:115:10> Step 'a3Attack' defined as variable at <core.mal:120:9> and attack step at <core.mal:67:7>",
-      "[ANALYZER WARNING] <core.mal:116:10> Step 'otherAttack' defined as variable at <core.mal:122:9> and attack step at <core.mal:118:7>",
-      "[ANALYZER WARNING] <core.mal:117:10> Step 'a1' defined as variable at <core.mal:126:9> and field at <core.mal:151:38>",
-      "[ANALYZER WARNING] <core.mal:126:14> Step 'a6' defined as variable at <core.mal:124:9> and field at <core.mal:150:38>",
-      "[ANALYZER WARNING] <core.mal:144:3> Association 'A5 [a5] <-- L2 --> A6 [a6]' is never used",
-      "[ANALYZER WARNING] <core.mal:150:3> Association 'A3 [a3] <-- L3 --> A6 [a6]' is never used",
+      "[ANALYZER WARNING] <core.mal:76:10> Category 'C2' contains no assets or metadata",
+      "[ANALYZER WARNING] <core.mal:100:18> Asset 'A6' is abstract but never extended to",
+      "[ANALYZER WARNING] <core.mal:130:3> Association 'A5 [a5] <-- L2 --> A6 [a6]' is never used",
+      "[ANALYZER WARNING] <core.mal:136:3> Association 'A3 [a3] <-- L3 --> A6 [a6]' is never used",
       ""
     };
     assertErrLines(lines);
@@ -1675,7 +1583,7 @@ public class TestAllFeatures extends MalTest {
     var parentSteps = attackStep.getParentSteps();
     assertEquals(0, requires.size());
     assertEquals(0, reaches.size());
-    assertEquals(5, parentSteps.size());
+    assertEquals(4, parentSteps.size());
 
     // Auto-generated parent step 1
     Lang.StepExpr step =
@@ -1751,45 +1659,21 @@ public class TestAllFeatures extends MalTest {
                 lang.getAsset("A1"),
                 lang.getAsset("A4"),
                 lang.getAsset("A4"),
-                new Lang.StepCollect(
+                new Lang.StepCall(
                     lang.getAsset("A3"),
                     lang.getAsset("A1"),
                     lang.getAsset("A4"),
                     lang.getAsset("A4"),
-                    new Lang.StepTransitive(
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        new Lang.StepField(
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1").getField("a1Super"))),
-                    new Lang.StepField(
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A4"),
-                        lang.getAsset("A4"),
-                        lang.getAsset("A1").getField("a4"))),
-                new Lang.StepField(
-                    lang.getAsset("A2"),
+                    "reversevar2"),
+                new Lang.StepCall(
+                    lang.getAsset("A1"),
                     lang.getAsset("A1"),
                     lang.getAsset("A4"),
                     lang.getAsset("A4"),
-                    lang.getAsset("A1").getField("a4"))),
+                    "reversevar")),
             new Lang.StepAttackStep(
                 lang.getAsset("A4"), lang.getAsset("A4"), lang.getAsset("A4").getAttackStep("a")));
     assertLangStepExpr(step, parentSteps.get(3));
-
-    // Auto-generated parent step 5
-    step =
-        new Lang.StepAttackStep(
-            lang.getAsset("A7"),
-            lang.getAsset("A1"),
-            lang.getAsset("A7").getAttackStep("a7Attack"));
-    assertLangStepExpr(step, parentSteps.get(4));
 
     // Check attack step "a1Attack2"
     attackStep =
@@ -2216,12 +2100,12 @@ public class TestAllFeatures extends MalTest {
             lang.getAsset("A2"),
             null,
             null,
-            new Lang.StepField(
+            new Lang.StepCall(
+                lang.getAsset("A2"),
                 lang.getAsset("A2"),
                 lang.getAsset("A1"),
-                lang.getAsset("A1"),
                 lang.getAsset("A3"),
-                lang.getAsset("A1").getField("a1Super")),
+                "reverseV1"),
             new Lang.StepAttackStep(
                 lang.getAsset("A3"), lang.getAsset("A3"), lang.getAsset("A3").getAttackStep("AT")));
     assertLangStepExpr(step, parentSteps.get(0));
@@ -2459,12 +2343,12 @@ public class TestAllFeatures extends MalTest {
             lang.getAsset("A3"),
             null,
             null,
-            new Lang.StepField(
+            new Lang.StepCall(
                 lang.getAsset("A3"),
                 lang.getAsset("A1"),
                 lang.getAsset("A1"),
                 lang.getAsset("A2"),
-                lang.getAsset("A1").getField("a1Sub")),
+                "V1"),
             new Lang.StepAttackStep(
                 lang.getAsset("A2"),
                 lang.getAsset("A2"),
@@ -2517,34 +2401,18 @@ public class TestAllFeatures extends MalTest {
                 lang.getAsset("A4"),
                 lang.getAsset("A1"),
                 lang.getAsset("A1"),
-                new Lang.StepField(
+                new Lang.StepCall(
                     lang.getAsset("A4"),
                     lang.getAsset("A4"),
                     lang.getAsset("A1"),
-                    lang.getAsset("A2"),
-                    lang.getAsset("A4").getField("a1")),
-                new Lang.StepCollect(
+                    lang.getAsset("A1"),
+                    "var"),
+                new Lang.StepCall(
                     lang.getAsset("A4"),
                     lang.getAsset("A4"),
                     lang.getAsset("A1"),
                     lang.getAsset("A3"),
-                    new Lang.StepField(
-                        lang.getAsset("A4"),
-                        lang.getAsset("A4"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A4").getField("a1")),
-                    new Lang.StepTransitive(
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        new Lang.StepField(
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1"),
-                            lang.getAsset("A1").getField("a1Sub"))))),
+                    "var2")),
             new Lang.StepAttackStep(
                 lang.getAsset("A1"),
                 lang.getAsset("A1"),
@@ -2605,7 +2473,7 @@ public class TestAllFeatures extends MalTest {
     assertEquals(1, asset.getFields().size());
     assertLangField(asset, "a1", 1, 1);
     // Check attack steps
-    assertEquals(2, asset.getAttackSteps().size());
+    assertEquals(1, asset.getAttackSteps().size());
 
     // Check attack step "a7Attack"
     var attackStep =
@@ -2618,87 +2486,27 @@ public class TestAllFeatures extends MalTest {
     var reaches = attackStep.getReaches();
     var parentSteps = attackStep.getParentSteps();
     assertEquals(0, requires.size());
-    assertEquals(3, reaches.size());
-    assertEquals(1, parentSteps.size());
+    assertEquals(1, reaches.size());
+    assertEquals(0, parentSteps.size());
 
     // Auto-generated reaches step 1
     Lang.StepExpr step =
-        new Lang.StepAttackStep(
-            lang.getAsset("A7"),
-            lang.getAsset("A1"),
-            lang.getAsset("A1").getAttackStep("a1Attack1"));
-    assertLangStepExpr(step, reaches.get(0));
-
-    // Auto-generated reaches step 2
-    step =
-        new Lang.StepAttackStep(
-            lang.getAsset("A7"),
-            lang.getAsset("A7"),
-            lang.getAsset("A7").getAttackStep("a7Attack"));
-    assertLangStepExpr(step, reaches.get(1));
-
-    // Auto-generated reaches step 3
-    step =
         new Lang.StepCollect(
             lang.getAsset("A7"),
             lang.getAsset("A7"),
             null,
             null,
-            new Lang.StepCollect(
+            new Lang.StepCall(
                 lang.getAsset("A7"),
                 lang.getAsset("A7"),
                 lang.getAsset("A8"),
                 lang.getAsset("A8"),
-                new Lang.StepCollect(
-                    lang.getAsset("A7"),
-                    lang.getAsset("A7"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    new Lang.StepField(
-                        lang.getAsset("A7"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1").getField("a1Super")),
-                    new Lang.StepField(
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A8"),
-                        lang.getAsset("A8"),
-                        lang.getAsset("A1").getField("a8"))),
-                new Lang.StepField(
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8").getField("a8Super"))),
+                "a1"),
             new Lang.StepAttackStep(
                 lang.getAsset("A8"),
                 lang.getAsset("A8"),
                 lang.getAsset("A8").getAttackStep("destroy")));
-    assertLangStepExpr(step, reaches.get(2));
-
-    // Auto-generated parent step 1
-    step =
-        new Lang.StepAttackStep(
-            lang.getAsset("A7"),
-            lang.getAsset("A7"),
-            lang.getAsset("A7").getAttackStep("a7Attack"));
-    assertLangStepExpr(step, parentSteps.get(0));
-
-    // Check attack step "otherAttack"
-    attackStep =
-        assertGetLangAttackStep(
-            asset, "otherAttack", Lang.AttackStepType.ANY, false, false, false, false, Map.of());
-    assertLangTags(attackStep, List.of());
-    assertLangCIA(attackStep, null);
-    assertLangTTC(attackStep, null);
-    requires = attackStep.getRequires();
-    reaches = attackStep.getReaches();
-    parentSteps = attackStep.getParentSteps();
-    assertEquals(0, requires.size());
-    assertEquals(0, reaches.size());
-    assertEquals(0, parentSteps.size());
+    assertLangStepExpr(step, reaches.get(0));
   }
 
   private static void assertAssetA8(Lang lang) {
@@ -2768,34 +2576,12 @@ public class TestAllFeatures extends MalTest {
             lang.getAsset("A8"),
             null,
             null,
-            new Lang.StepCollect(
+            new Lang.StepCall(
                 lang.getAsset("A8"),
                 lang.getAsset("A8"),
                 lang.getAsset("A7"),
                 lang.getAsset("A7"),
-                new Lang.StepField(
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8").getField("a8Sub")),
-                new Lang.StepCollect(
-                    lang.getAsset("A8"),
-                    lang.getAsset("A8"),
-                    lang.getAsset("A7"),
-                    lang.getAsset("A7"),
-                    new Lang.StepField(
-                        lang.getAsset("A8"),
-                        lang.getAsset("A8"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A8").getField("a1")),
-                    new Lang.StepField(
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A1"),
-                        lang.getAsset("A7"),
-                        lang.getAsset("A1").getField("a1Sub")))),
+                "reversea1"),
             new Lang.StepAttackStep(
                 lang.getAsset("A7"),
                 lang.getAsset("A7"),
